--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,6 @@ matrix:
       env: TOXENV=py2-cover,py3-cover,coverage
     - python: 3.5
       env: TOXENV=docs
-
     - python: 2.7
       env: TOXENV=py27
       arch: ppc64le
@@ -62,9 +61,6 @@ matrix:
       dist: xenial
       sudo: true
       arch: ppc64le
-    - python: pypy
-      env: TOXENV=pypy
-      arch: ppc64le
     - python: pypy3
       env: TOXENV=pypy3
       arch: ppc64le
@@ -78,6 +74,7 @@ matrix:
   allow_failures:
     - env: TOXENV=pypy3
     - env: TOXENV=py38
+    - env: TOXENV=py2-cover,py3-cover,coverage
 
 install:
   - travis_retry pip install tox
